Updated utils and Pauli-Z notebook for scheduling

--- a/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
+++ b/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,31 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Qibo 0.2.4|INFO|2024-01-24 19:59:31]: Using qibojit (numba) backend on /CPU:0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial off diagonal norm 8.48528137423857\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set the qibo backend (we suggest qibojit if N >= 20)\n",
     "# alternatives: tensorflow (not optimized), numpy (when CPU not supported by jit)\n",
     "set_backend(\"qibojit\", \"numba\")\n",
     "\n",
     "# hamiltonian parameters\n",
-    "nqubits = 2\n",
+    "nqubits = 5\n",
     "h = 3\n",
     "\n",
     "# define the hamiltonian\n",
@@ -160,20 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-2.-0.j -0.-0.j -0.-0.j -0.-0.j]\n",
-      " [-0.-0.j  2.-0.j -0.-0.j -0.-0.j]\n",
-      " [-0.-0.j -0.-0.j  2.-0.j -0.-0.j]\n",
-      " [-0.-0.j -0.-0.j -0.-0.j -2.-0.j]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(H_TFIM.matrix)"
    ]
@@ -219,8 +193,9 @@
     "# add in initial values for plotting\n",
     "off_diagonal_norm_history = [dbi.off_diagonal_norm]\n",
     "steps = [0]\n",
+    "scheduling = DoubleBracketScheduling.use_hyperopt\n",
     "for _ in range(NSTEPS):\n",
-    "    dbi, idx, step, flip_sign = select_best_dbr_generator(dbi, Z_ops, compare_canonical=False, max_evals=max_evals, step_max=step_max)\n",
+    "    dbi, idx, step, flip_sign = select_best_dbr_generator(dbi, Z_ops, scheduling=scheduling, compare_canonical=False, max_evals=max_evals, step_max=step_max)\n",
     "    off_diagonal_norm_history.append(dbi.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
     "    if flip_sign < 0:\n",
@@ -294,7 +269,6 @@
     "        step_max = 1,\n",
     "        space = hp.uniform,\n",
     "        optimizer = tpe,\n",
-    "        max_evals = max_evals,\n",
     "    )\n",
     "    dbi_canonical(step=step)\n",
     "    print(f\"New optimized step at iteration {s+1}/{NSTEPS}: {step}, loss {dbi_canonical.off_diagonal_norm}\")\n",
@@ -389,7 +363,7 @@
     "off_diagonal_norm_history_mixed = [dbi_mixed.off_diagonal_norm]\n",
     "steps = [0]\n",
     "for _ in range(NSTEPS):\n",
-    "    dbi_mixed, idx, step, flip_sign = select_best_dbr_generator(dbi_mixed, Z_ops, compare_canonical=True, max_evals=max_evals)\n",
+    "    dbi_mixed, idx, step, flip_sign = select_best_dbr_generator(dbi_mixed, Z_ops, scheduling=scheduling, compare_canonical=True, max_evals=max_evals, step_max=step_max)\n",
     "    off_diagonal_norm_history_mixed.append(dbi_mixed.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
     "    if idx == len(Z_ops):\n",
@@ -479,7 +453,7 @@
     "remaining_NSTEPS = NSTEPS - cannonical_NSTEPS\n",
     "dbi_mixed_can.mode = DoubleBracketGeneratorType.single_commutator\n",
     "for _ in range(remaining_NSTEPS):\n",
-    "    dbi_mixed_can, idx, step, flip_sign = select_best_dbr_generator(dbi_mixed_can, Z_ops, compare_canonical=False)\n",
+    "    dbi_mixed_can, idx, step, flip_sign = select_best_dbr_generator(dbi_mixed_can, Z_ops, scheduling=scheduling, compare_canonical=False, max_evals=max_evals, step_max=step_max)\n",
     "    off_diagonal_norm_history_mixed_can.append(dbi_mixed_can.off_diagonal_norm)\n",
     "    steps_mixed_can.append(step)\n",
     "    if idx == len(Z_ops):\n",
