--- a/examples/dbi/dbi_strategy_magnetic_field.ipynb
+++ b/examples/dbi/dbi_strategy_magnetic_field.ipynb
@@ -67,7 +67,10 @@
     "# initialize dbi object\n",
     "nqubits = 5\n",
     "h0 = random_hermitian(2**nqubits, seed=2)\n",
-    "dbi = DoubleBracketIteration(Hamiltonian(nqubits=nqubits, matrix=h0))\n",
+    "scheduling = DoubleBracketScheduling.use_hyperopt\n",
+    "mode = DoubleBracketGeneratorType.single_commutator\n",
+    "n_taylor = 5\n",
+    "dbi = DoubleBracketIteration(Hamiltonian(nqubits=nqubits, matrix=h0), scheduling=scheduling, mode=mode)\n",
     "print(\"Initial off diagonal norm\", dbi.off_diagonal_norm)\n",
     "visualize_matrix(dbi.h.matrix, title=f'Random hamiltonian with L={nqubits}')"
    ]
@@ -82,7 +85,7 @@
     "onsite_Z_ops = generate_onsite_Z_ops(nqubits)\n",
     "d_coef = onsite_Z_decomposition(dbi.h.matrix, onsite_Z_ops)\n",
     "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])\n",
-    "grad, s = gradient_onsite_Z(dbi,d,3, onsite_Z_ops)\n",
+    "grad, s = gradient_onsite_Z(dbi,d,5, onsite_Z_ops)\n",
     "print('The initial D coefficients:', d_coef)\n",
     "print('Gradient:', grad)\n",
     "print('s:', s)"
@@ -95,11 +98,12 @@
    "outputs": [],
    "source": [
     "iters = 30\n",
-    "off_diagonal_norm_tot = [dbi.off_diagonal_norm]\n",
+    "off_diagonal_norm = [dbi.off_diagonal_norm]\n",
     "s_step = [0]\n",
     "for i in range(iters):\n",
     "    s, d_coef, d = gradient_descent_onsite_Z(dbi, d_coef, d, onsite_Z_ops=onsite_Z_ops, max_evals=100)\n",
-    "    off_diagonal_norm_tot.append(dbi.off_diagonal_norm)\n",
+    "    dbi(step=s, d=d)\n",
+    "    off_diagonal_norm.append(dbi.off_diagonal_norm)\n",
     "    s_step.append(s)"
    ]
   },
@@ -110,7 +114,7 @@
    "outputs": [],
    "source": [
     "plt.title(str(nqubits) + ' spins magnetic field diagonalization')\n",
-    "plt.plot(off_diagonal_norm_tot)\n",
+    "plt.plot(off_diagonal_norm)\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel(r'$|| \\sigma(e^{sW}He^{-sW}) || $')"
    ]
@@ -151,7 +155,7 @@
     "# backend\n",
     "set_backend(\"qibojit\", \"numba\")\n",
     "# initialize dbi object\n",
-    "dbi_TFIM = DoubleBracketIteration(deepcopy(H_TFIM))"
+    "dbi_TFIM = DoubleBracketIteration(deepcopy(H_TFIM), scheduling=scheduling, mode=mode)"
    ]
   },
   {
@@ -164,7 +168,7 @@
     "onsite_Z_ops = generate_onsite_Z_ops(nqubits)\n",
     "d_coef = onsite_Z_decomposition(dbi_TFIM.h.matrix, onsite_Z_ops)\n",
     "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])\n",
-    "grad, s = gradient_onsite_Z(dbi_TFIM,d,3, onsite_Z_ops)\n",
+    "grad, s = gradient_onsite_Z(dbi_TFIM,d,5, onsite_Z_ops)\n",
     "print('Initial off-diagonal norm:', dbi.off_diagonal_norm)\n",
     "print('The initial D coefficients:', d_coef)\n",
     "print('Gradient:', grad)\n",
@@ -177,13 +181,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NSTEPS = 30\n",
-    "off_diagonal_norm_tot = [dbi_TFIM.off_diagonal_norm]\n",
-    "s_step = [0]\n",
+    "NSTEPS = 15\n",
+    "off_diagonal_norm_delta = [dbi_TFIM.off_diagonal_norm]\n",
+    "s_step_delta = [0]\n",
     "for _ in range(NSTEPS):\n",
-    "    s, d_coef, d = gradient_descent_onsite_Z(dbi_TFIM, d_coef, d, onsite_Z_ops=onsite_Z_ops, max_evals=100)\n",
-    "    off_diagonal_norm_tot.append(dbi_TFIM.off_diagonal_norm)\n",
-    "    s_step.append(s)\n",
+    "    s, d_coef, d = gradient_descent_onsite_Z(dbi_TFIM, d_coef, d, onsite_Z_ops=onsite_Z_ops, max_evals=100, n_taylor=5, use_ds=True)\n",
+    "    dbi_TFIM(step=s, d=d)\n",
+    "    off_diagonal_norm_delta.append(dbi_TFIM.off_diagonal_norm)\n",
+    "    s_step_delta.append(s)\n",
     "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {s} with d_coef {d_coef}, loss {dbi_TFIM.off_diagonal_norm}\")"
    ]
   },
@@ -194,7 +199,7 @@
    "outputs": [],
    "source": [
     "plt.title(str(nqubits) + ' spins TFIM magnetic field diagonalization')\n",
-    "plt.plot(off_diagonal_norm_tot)\n",
+    "plt.plot(off_diagonal_norm_delta)\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel(r'$|| \\sigma(e^{sW}He^{-sW}) || $')"
    ]
@@ -215,6 +220,85 @@
    "source": [
     "## Different initial `d`\n",
     "Next, we show the effect of different choices of the initial direction of the gradient descent method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = H_TFIM.matrix\n",
+    "L = int(np.log2(H.shape[0]))\n",
+    "N = np.diag(np.linspace(np.min(np.diag(H)),np.max(np.diag(H)),2**L))\n",
+    "d_coef = onsite_Z_decomposition(N, onsite_Z_ops)\n",
+    "print(d_coef)\n",
+    "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualize_matrix(H, 'Initial hamiltonian')\n",
+    "visualize_matrix(N, 'Min-max diagonal matrix')\n",
+    "visualize_matrix(d, 'Min-max projection onsite-Z')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we see that the min-max diagonal operator can be correctly decomposed into onsite-Z operators. Then we generate the diagonalization curve and compare with other initializations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backend\n",
+    "set_backend(\"qibojit\", \"numba\")\n",
+    "# initialize dbi object\n",
+    "dbi_TFIM_MMH = DoubleBracketIteration(deepcopy(H_TFIM), scheduling=scheduling, mode=mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NSTEPS = 15\n",
+    "off_diagonal_norm_MMH = [dbi_TFIM_MMH.off_diagonal_norm]\n",
+    "s_step_MMH = [0]\n",
+    "# d = np.diag(np.linspace(np.min(np.diag(dbi_TFIM_MMH.h.matrix)),np.max(np.diag(dbi_TFIM_MMH.h.matrix)),2**nqubits))\n",
+    "# d_coef = onsite_Z_decomposition(d, onsite_Z_ops)\n",
+    "for _ in range(NSTEPS):\n",
+    "    d = np.diag(np.linspace(np.min(np.diag(dbi_TFIM_MMH.h.matrix)),np.max(np.diag(dbi_TFIM_MMH.h.matrix)),2**nqubits))\n",
+    "    d_coef = onsite_Z_decomposition(d, onsite_Z_ops)\n",
+    "    s, d_coef, d = gradient_descent_onsite_Z(dbi_TFIM_MMH, d_coef, d, onsite_Z_ops=onsite_Z_ops, max_evals=100)\n",
+    "    dbi_TFIM_MMH(d=d, step=s)\n",
+    "    off_diagonal_norm_MMH.append(dbi_TFIM_MMH.off_diagonal_norm)\n",
+    "    s_step_MMH.append(s)\n",
+    "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {s} with d_coef {d_coef}, loss {dbi_TFIM_MMH.off_diagonal_norm}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title(str(nqubits) + ' spins TFIM magnetic field diagonalization')\n",
+    "plt.plot(off_diagonal_norm_MMH, label='MMH')\n",
+    "plt.plot(off_diagonal_norm_delta, label='delta')\n",
+    "plt.xlabel('Iteration')\n",
+    "plt.ylabel(r'$|| \\sigma(e^{sW}He^{-sW}) || $')\n",
+    "plt.legend()"
    ]
   }
  ],
