--- a/src/qibo/models/dbi/Test gci with evolution oracles vs existing dbi .ipynb
+++ b/src/qibo/models/dbi/Test gci with evolution oracles vs existing dbi .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e88ec634",
+   "id": "3a0428df",
    "metadata": {},
    "source": [
     "## This compares to DoubleBracketIteration whenever possible"
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.5|INFO|2024-02-28 07:12:02]: Using qibojit (numba) backend on /CPU:0\n"
+      "[Qibo 0.2.5|INFO|2024-02-28 08:17:20]: Using qibojit (numba) backend on /CPU:0\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7e0a4f",
+   "id": "fa707dfd",
    "metadata": {},
    "source": [
     "#### 1. DoubleBracketIteration and group commutator"
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.5|WARNING|2024-02-28 07:12:02]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
+      "[Qibo 0.2.5|WARNING|2024-02-28 08:17:20]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a136181b",
+   "id": "5181f671",
    "metadata": {},
    "source": [
     "DoubleBracketIteration only rotates the hamiltonian h, and currently doesn't give access to the unitary"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8fe0eee",
+   "id": "c6cd7c30",
    "metadata": {},
    "source": [
     "Instead, we can wrap around the code executed in __call__"
@@ -96,14 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "56ccf62a",
+   "id": "f204bed7",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.5|WARNING|2024-02-28 07:12:02]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
+      "[Qibo 0.2.5|WARNING|2024-02-28 08:17:20]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e0884ba",
+   "id": "1649c99c",
    "metadata": {},
    "source": [
     "#### 2. Evolution oracle hamiltonian simulation\n"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "c9a9b4ef",
    "metadata": {},
    "outputs": [],
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "78e4188a",
+   "execution_count": 31,
+   "id": "3b757553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "72bdc7a7",
    "metadata": {},
    "outputs": [],
@@ -174,17 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "98d982bc",
+   "execution_count": 33,
+   "id": "1e75a4bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.007067863925084279"
+       "0.007068588046085704"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,17 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8993f422",
+   "execution_count": 34,
+   "id": "84853d7a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.057067374464121946"
+       "0.05706730540522153"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,103 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72010706",
+   "id": "e4202b2c",
+   "metadata": {},
+   "source": [
+    "We may improve the discrepancy by setting smaller eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "275e2b48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running discretization adjustment\n",
+      "3 5.703698185439878e-05\n",
+      "6 1.425710829003397e-05\n",
+      "12 3.5641435459211722e-06\n",
+      "24 8.910275418042565e-07\n",
+      "48 2.2275636394665562e-07\n",
+      "96 5.568905837658941e-08\n",
+      "running discretization adjustment\n",
+      "3 5.703698185442657e-05\n",
+      "6 1.4257108290027298e-05\n",
+      "12 3.5641435458984836e-06\n",
+      "24 8.910275417724017e-07\n",
+      "48 2.2275636393673975e-07\n",
+      "96 5.568905839345736e-08\n",
+      "running discretization adjustment\n",
+      "3 5.703698185439878e-05\n",
+      "6 1.425710829003397e-05\n",
+      "12 3.5641435459211722e-06\n",
+      "24 8.910275418042565e-07\n",
+      "48 2.2275636394665562e-07\n",
+      "96 5.568905837658941e-08\n",
+      "running discretization adjustment\n",
+      "3 5.703698185442657e-05\n",
+      "6 1.4257108290027298e-05\n",
+      "12 3.5641435458984836e-06\n",
+      "24 8.910275417724017e-07\n",
+      "48 2.2275636393673975e-07\n",
+      "96 5.568905839345736e-08\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.00706869515351788"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gci.iterated_hamiltonian_evolution_oracle.eps_trottersuzuki = 0.0000001\n",
+    "evolution_oracle_diagonal_target.eps_trottersuzuki = 0.00000001\n",
+    "gci.iterated_hamiltonian_evolution_oracle.please_be_verbose = True\n",
+    "evolution_oracle_diagonal_target.please_be_verbose = False\n",
+    "\n",
+    "gci.mode_double_bracket_rotation = DoubleBracketRotationType.group_commutator\n",
+    "unitary_gc_from_oracles = gci.group_commutator( np.sqrt(t_step),\n",
+    "           diagonal_association_evolution_oracle = evolution_oracle_diagonal_target )\n",
+    "norm(unitary_gc_from_oracles['forwards'].unitary() - unitary_gc_existing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "15be2e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.009965571871141131"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "gci.mode_double_bracket_rotation = DoubleBracketRotationType.group_commutator_other_sorting\n",
+    "unitary_gc_from_oracles = gci.group_commutator( np.sqrt(t_step),\n",
+    "           diagonal_association_evolution_oracle = evolution_oracle_diagonal_target )\n",
+    "norm(unitary_gc_from_oracles['backwards'].unitary() - unitary_gc_existing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24432d44",
    "metadata": {},
    "source": [
     "#### 3. Evolution oracle numpy\n"
@@ -224,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "762e0860",
+   "execution_count": 23,
+   "id": "cf131743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9bf85f00",
+   "execution_count": 24,
+   "id": "f56c5eac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "14081ca6",
+   "execution_count": 25,
+   "id": "f8b0df99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df014d55",
+   "id": "8108c4fd",
    "metadata": {},
    "source": [
     "Compared to the group commutator using Hamiltonian simulation there will be small deviations that arise from Trotter-Suzuki decomposition"
@@ -267,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5f5547de",
+   "execution_count": 26,
+   "id": "efbf6f4a",
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +375,7 @@
        "0.0040927048339044324"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,8 +386,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8e277576",
+   "execution_count": 27,
+   "id": "a470eee4",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +396,7 @@
        "0.057357576681930346"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6066566",
+   "id": "a0e838f2",
    "metadata": {},
    "source": [
     "We may check by switching the group commutator flag that the difference comes from ordering and inversions"
@@ -319,8 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "38557c87",
+   "execution_count": 28,
+   "id": "5d188cc0",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +425,7 @@
        "0.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b976dfb7",
+   "id": "da275227",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -353,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d9a1a9f",
+   "id": "4b17028f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -361,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31bd4a9e",
+   "id": "6c24c01c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -369,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7236de2a",
+   "id": "c2298051",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -377,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e22d7b2",
+   "id": "9f8f03f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -385,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "791378c7",
+   "id": "25279269",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -393,30 +489,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b282521c",
+   "id": "5be7b4a3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8005bf94",
+   "execution_count": null,
+   "id": "ef1e0b8a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'GroupCommutatorIterationWithEvolutionOracles' object has no attribute 'group_commutator_query_list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_187837/1460049839.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mused_circuit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiagonal_association\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mevolution_oracle_diagonal_target\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Projects_git/DBI_qibo/src/qibo/models/dbi/group_commutator_iteration_transpiler.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, step_duration, diagonal_association, mode_double_bracket_rotation)\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0;31m# This will run the appropriate group commutator step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m             double_bracket_rotation_step = self.group_commutator_query_list(\n\u001b[0m\u001b[1;32m    127\u001b[0m                 \u001b[0mstep_duration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiagonal_association\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m             )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GroupCommutatorIterationWithEvolutionOracles' object has no attribute 'group_commutator_query_list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "used_circuit = gci(t_step, diagonal_association= evolution_oracle_diagonal_target)"
    ]
@@ -424,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af8fd94",
+   "id": "d669f931",
    "metadata": {},
    "outputs": [],
    "source": [
