--- a/src/qibo/models/dbi/Test gci with evolution oracles vs existing dbi .ipynb
+++ b/src/qibo/models/dbi/Test gci with evolution oracles vs existing dbi .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a0428df",
+   "id": "165fb962",
    "metadata": {},
    "source": [
     "## This compares to DoubleBracketIteration whenever possible"
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.5|INFO|2024-02-28 08:17:20]: Using qibojit (numba) backend on /CPU:0\n"
+      "[Qibo 0.2.5|INFO|2024-02-28 08:38:48]: Using qibojit (numba) backend on /CPU:0\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa707dfd",
+   "id": "5566710b",
    "metadata": {},
    "source": [
     "#### 1. DoubleBracketIteration and group commutator"
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.5|WARNING|2024-02-28 08:17:20]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
+      "[Qibo 0.2.5|WARNING|2024-02-28 08:38:48]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5181f671",
+   "id": "6528f1df",
    "metadata": {},
    "source": [
     "DoubleBracketIteration only rotates the hamiltonian h, and currently doesn't give access to the unitary"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6cd7c30",
+   "id": "656f7226",
    "metadata": {},
    "source": [
     "Instead, we can wrap around the code executed in __call__"
@@ -96,14 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f204bed7",
+   "id": "8000ad94",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.5|WARNING|2024-02-28 08:17:20]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
+      "[Qibo 0.2.5|WARNING|2024-02-28 08:38:48]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1649c99c",
+   "id": "eaae3f92",
    "metadata": {},
    "source": [
     "#### 2. Evolution oracle hamiltonian simulation\n"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "c9a9b4ef",
    "metadata": {},
    "outputs": [],
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "3b757553",
+   "execution_count": 7,
+   "id": "251a9aaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "72bdc7a7",
    "metadata": {},
    "outputs": [],
@@ -174,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "1e75a4bf",
+   "execution_count": 9,
+   "id": "1b867ee3",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "0.007068588046085704"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "84853d7a",
+   "execution_count": 10,
+   "id": "4249320a",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "0.05706730540522153"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4202b2c",
+   "id": "d19c7b59",
    "metadata": {},
    "source": [
     "We may improve the discrepancy by setting smaller eps"
@@ -224,36 +224,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "275e2b48",
+   "execution_count": 11,
+   "id": "60191dd2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running discretization adjustment\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=-0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
       "3 5.703698185439878e-05\n",
       "6 1.425710829003397e-05\n",
       "12 3.5641435459211722e-06\n",
       "24 8.910275418042565e-07\n",
       "48 2.2275636394665562e-07\n",
       "96 5.568905837658941e-08\n",
-      "running discretization adjustment\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
       "3 5.703698185442657e-05\n",
       "6 1.4257108290027298e-05\n",
       "12 3.5641435458984836e-06\n",
       "24 8.910275417724017e-07\n",
       "48 2.2275636393673975e-07\n",
       "96 5.568905839345736e-08\n",
-      "running discretization adjustment\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=-0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
       "3 5.703698185439878e-05\n",
       "6 1.425710829003397e-05\n",
       "12 3.5641435459211722e-06\n",
       "24 8.910275418042565e-07\n",
       "48 2.2275636394665562e-07\n",
       "96 5.568905837658941e-08\n",
-      "running discretization adjustment\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
       "3 5.703698185442657e-05\n",
       "6 1.4257108290027298e-05\n",
       "12 3.5641435458984836e-06\n",
@@ -268,7 +268,7 @@
        "0.00706869515351788"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,17 +287,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "15be2e17",
+   "execution_count": 12,
+   "id": "6cd42839",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling circuit in Hamiltonian simulation mode for time t=-0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
+      "3 5.703698185439878e-05\n",
+      "6 1.425710829003397e-05\n",
+      "12 3.5641435459211722e-06\n",
+      "24 8.910275418042565e-07\n",
+      "48 2.2275636394665562e-07\n",
+      "96 5.568905837658941e-08\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
+      "3 5.703698185442657e-05\n",
+      "6 1.4257108290027298e-05\n",
+      "12 3.5641435458984836e-06\n",
+      "24 8.910275417724017e-07\n",
+      "48 2.2275636393673975e-07\n",
+      "96 5.568905839345736e-08\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=-0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
+      "3 5.703698185439878e-05\n",
+      "6 1.425710829003397e-05\n",
+      "12 3.5641435459211722e-06\n",
+      "24 8.910275418042565e-07\n",
+      "48 2.2275636394665562e-07\n",
+      "96 5.568905837658941e-08\n",
+      "Calling circuit in Hamiltonian simulation mode for time t=0.07141428428542851 and next running discretization adjustment to reach precision eps = 1e-07\n",
+      "3 5.703698185442657e-05\n",
+      "6 1.4257108290027298e-05\n",
+      "12 3.5641435458984836e-06\n",
+      "24 8.910275417724017e-07\n",
+      "48 2.2275636393673975e-07\n",
+      "96 5.568905839345736e-08\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.009965571871141131"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24432d44",
+   "id": "3a432c29",
    "metadata": {},
    "source": [
     "#### 3. Evolution oracle numpy\n"
@@ -320,8 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "cf131743",
+   "execution_count": 13,
+   "id": "d74c7f45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,8 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f56c5eac",
+   "execution_count": 14,
+   "id": "687be448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "f8b0df99",
+   "execution_count": 15,
+   "id": "9e4dce92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8108c4fd",
+   "id": "1bda6a3b",
    "metadata": {},
    "source": [
     "Compared to the group commutator using Hamiltonian simulation there will be small deviations that arise from Trotter-Suzuki decomposition"
@@ -363,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "efbf6f4a",
+   "execution_count": 16,
+   "id": "406b3e0c",
    "metadata": {
     "scrolled": true
    },
@@ -375,7 +409,7 @@
        "0.0040927048339044324"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,8 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "a470eee4",
+   "execution_count": 17,
+   "id": "e05a5407",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +430,7 @@
        "0.057357576681930346"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e838f2",
+   "id": "89ca2378",
    "metadata": {},
    "source": [
     "We may check by switching the group commutator flag that the difference comes from ordering and inversions"
@@ -415,8 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5d188cc0",
+   "execution_count": 18,
+   "id": "dafb7da0",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +459,7 @@
        "0.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da275227",
+   "id": "06178c1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -449,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b17028f",
+   "id": "1648f1fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -457,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c24c01c",
+   "id": "df8bdfc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -465,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2298051",
+   "id": "91d84c18",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -473,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8f03f4",
+   "id": "0a0d15ce",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -481,25 +515,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25279269",
+   "id": "c7291936",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5be7b4a3",
+   "execution_count": 20,
+   "id": "1845d734",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evolution_oracle_hamiltonian_simulation = EvolutionOracle(deepcopy(h_input), \"ZX\",\n",
+    "                               mode_evolution_oracle = EvolutionOracleType.hamiltonian_simulation)\n",
+    "evolution_oracle_diagonal_target =  EvolutionOracle(d_0, \"D0\",\n",
+    "               mode_evolution_oracle=EvolutionOracleType.numerical)\n",
+    "gci = GroupCommutatorIterationWithEvolutionOracles( deepcopy(evolution_oracle_hamiltonian_simulation ))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1e0b8a",
+   "execution_count": 25,
+   "id": "cdc92ec2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "assert evolution_oracle_hamiltonian_simulation.mode_evolution_oracle.value == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a6a3602e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert evolution_oracle_diagonal_target.mode_evolution_oracle.value == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ba00110a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_202260/1460049839.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mused_circuit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiagonal_association\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mevolution_oracle_diagonal_target\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Projects_git/DBI_qibo/src/qibo/models/dbi/group_commutator_iteration_transpiler.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, step_duration, diagonal_association, mode_double_bracket_rotation)\u001b[0m\n\u001b[1;32m    128\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m             \u001b[0;31m# This will run the appropriate group commutator step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 130\u001b[0;31m             double_bracket_rotation_step = self.group_commutator(\n\u001b[0m\u001b[1;32m    131\u001b[0m                 \u001b[0mstep_duration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiagonal_association\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m             )\n",
+      "\u001b[0;32m~/Projects_git/DBI_qibo/src/qibo/models/dbi/group_commutator_iteration_transpiler.py\u001b[0m in \u001b[0;36mgroup_commutator\u001b[0;34m(self, s_step, diagonal_association_evolution_oracle, iterated_hamiltonian_evolution_oracle)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode_double_bracket_rotation\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mDoubleBracketRotationType\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup_commutator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m             \u001b[0;32massert\u001b[0m \u001b[0mdiagonal_association_evolution_oracle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode_evolution_oracle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0miterated_hamiltonian_evolution_oracle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode_evolution_oracle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m             if (diagonal_association_evolution_oracle.mode_evolution_oracle is EvolutionOracleType.text_strings or\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "used_circuit = gci(t_step, diagonal_association= evolution_oracle_diagonal_target)"
    ]
@@ -507,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d669f931",
+   "id": "85492abe",
    "metadata": {},
    "outputs": [],
    "source": [
