Added documentation + test of effect of n_taylor

--- a/examples/dbi/dbi_strategy_magnetic_field.ipynb
+++ b/examples/dbi/dbi_strategy_magnetic_field.ipynb
@@ -300,6 +300,89 @@
     "plt.ylabel(r'$|| \\sigma(e^{sW}He^{-sW}) || $')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Effect of `n_taylor`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backend\n",
+    "set_backend(\"qibojit\", \"numba\")\n",
+    "# initialize dbi object\n",
+    "nqubits = 5\n",
+    "h0 = random_hermitian(2**nqubits, seed=2)\n",
+    "scheduling = DoubleBracketScheduling.hyperopt\n",
+    "mode = DoubleBracketGeneratorType.single_commutator\n",
+    "n_1 = 5\n",
+    "n_2 = 2\n",
+    "dbi_1 = DoubleBracketIteration(Hamiltonian(nqubits=nqubits, matrix=h0), scheduling=scheduling, mode=mode)\n",
+    "dbi_2 = DoubleBracketIteration(Hamiltonian(nqubits=nqubits, matrix=h0), scheduling=scheduling, mode=mode)\n",
+    "print(\"Initial off diagonal norm\", dbi_1.off_diagonal_norm)\n",
+    "visualize_matrix(dbi_1.h.matrix, title=f'Random hamiltonian with L={nqubits}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate the onsite Z operators\n",
+    "onsite_Z_ops = generate_onsite_Z_ops(nqubits)\n",
+    "d_coef = onsite_Z_decomposition(dbi.h.matrix, onsite_Z_ops)\n",
+    "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])\n",
+    "grad, s = gradient_onsite_Z(dbi,d,5, onsite_Z_ops)\n",
+    "print('The initial D coefficients:', d_coef)\n",
+    "print('Gradient:', grad)\n",
+    "print('s:', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iters = 30\n",
+    "d_coef_1, d_1 = d_coef, d\n",
+    "d_coef_2, d_2 = d_coef, d\n",
+    "\n",
+    "off_diagonal_norm_1 = [dbi_1.off_diagonal_norm]\n",
+    "off_diagonal_norm_2 = [dbi_2.off_diagonal_norm]\n",
+    "s_step_1 = [0]\n",
+    "s_step_2 = [0]\n",
+    "for i in range(iters):\n",
+    "    s_1, d_coef_1, d_1 = gradient_descent_onsite_Z(dbi_1, d_coef_1, d_1, onsite_Z_ops=onsite_Z_ops, n_taylor=n_1, max_evals=100)\n",
+    "    s_2, d_coef_2, d_2 = gradient_descent_onsite_Z(dbi_2, d_coef_2, d_2, onsite_Z_ops=onsite_Z_ops, n_taylor=n_2, max_evals=100)\n",
+    "    dbi_1(step=s_1, d=d_1)\n",
+    "    dbi_2(step=s_2, d=d_2)\n",
+    "    off_diagonal_norm_1.append(dbi_1.off_diagonal_norm)\n",
+    "    off_diagonal_norm_2.append(dbi_2.off_diagonal_norm)\n",
+    "    s_step_1.append(s_1)\n",
+    "    s_step_2.append(s_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title(str(nqubits) + ' spins magnetic field diagonalization')\n",
+    "plt.plot(off_diagonal_norm_1, label=f'n_taylor={n_1}')\n",
+    "plt.plot(off_diagonal_norm_2, label=f'n_taylor={n_2}')\n",
+    "plt.legend()\n",
+    "plt.xlabel('Iteration')\n",
+    "plt.ylabel(r'$|| \\sigma(e^{sW}He^{-sW}) || $')"
+   ]
   }
  ],
  "metadata": {
