Fix error in notebook call (key arguments exchanged)

--- a/examples/dbi/dbi_strategy_magnetic_field.ipynb
+++ b/examples/dbi/dbi_strategy_magnetic_field.ipynb
@@ -85,7 +85,7 @@
     "onsite_Z_ops = generate_onsite_Z_ops(nqubits)\n",
     "d_coef = onsite_Z_decomposition(dbi.h.matrix, onsite_Z_ops)\n",
     "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])\n",
-    "grad, s = gradient_onsite_Z(dbi,d,5, onsite_Z_ops)\n",
+    "grad, s = gradient_onsite_Z(dbi, d, n_taylor=5, onsite_Z_ops=onsite_Z_ops)\n",
     "print('The initial D coefficients:', d_coef)\n",
     "print('Gradient:', grad)\n",
     "print('s:', s)"
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.title(str(nqubits) + ' spins magnetic field diagonalization')\n",
+    "plt.title(str(nqubits) + ' spins random hamiltonian')\n",
     "plt.plot(off_diagonal_norm)\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel(r'$|| \\sigma(e^{sW}He^{-sW}) || $')"
@@ -168,7 +168,7 @@
     "onsite_Z_ops = generate_onsite_Z_ops(nqubits)\n",
     "d_coef = onsite_Z_decomposition(dbi_TFIM.h.matrix, onsite_Z_ops)\n",
     "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])\n",
-    "grad, s = gradient_onsite_Z(dbi_TFIM,d,5, onsite_Z_ops)\n",
+    "grad, s = gradient_onsite_Z(dbi_TFIM, d, n_taylor=5, onsite_Z_ops=onsite_Z_ops)\n",
     "print('Initial off-diagonal norm:', dbi.off_diagonal_norm)\n",
     "print('The initial D coefficients:', d_coef)\n",
     "print('Gradient:', grad)\n",
@@ -322,7 +322,7 @@
     "scheduling = DoubleBracketScheduling.hyperopt\n",
     "mode = DoubleBracketGeneratorType.single_commutator\n",
     "n_1 = 5\n",
-    "n_2 = 2\n",
+    "n_2 = 3\n",
     "dbi_1 = DoubleBracketIteration(Hamiltonian(nqubits=nqubits, matrix=h0), scheduling=scheduling, mode=mode)\n",
     "dbi_2 = DoubleBracketIteration(Hamiltonian(nqubits=nqubits, matrix=h0), scheduling=scheduling, mode=mode)\n",
     "print(\"Initial off diagonal norm\", dbi_1.off_diagonal_norm)\n",
@@ -339,7 +339,7 @@
     "onsite_Z_ops = generate_onsite_Z_ops(nqubits)\n",
     "d_coef = onsite_Z_decomposition(dbi.h.matrix, onsite_Z_ops)\n",
     "d = sum([d_coef[i] * onsite_Z_ops[i] for i in range(nqubits)])\n",
-    "grad, s = gradient_onsite_Z(dbi,d,5, onsite_Z_ops)\n",
+    "grad, s = gradient_onsite_Z(dbi,d,n_taylor=5, onsite_Z_ops=onsite_Z_ops)\n",
     "print('The initial D coefficients:', d_coef)\n",
     "print('Gradient:', grad)\n",
     "print('s:', s)"
